--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -1,5 +1,40 @@
 {
+  "app" : {
     "above_the_folder": {
-      "headline1.part": "Hello, I´m"
+      "headline1_part": "Hello, I´m"
+    },
+    "about_me": {
+      "h2": "About me",
+      "text": "Hello, I´m Barbora Lambeinova. What I love about coding is the creativity of solutions and almost endless possibilities."
+    },
+    "competencen": {
+      "h2": "Core KCompetencies",
+      "text": "I usedd a variety of front-end technologies. You can take a look on the ready projects in the next section."
+    },
+    "work": {
+      "h2": "My work",
+      "text": "Explore the selection of my work here - interact with the projects to see my skills in action.",
+      "description": "Pokedex. A little project to see my work with APIs."
+    },
+    "reviews": {
+      "h2": "What my colleagues say about me:",
+      "review1": "",
+      "review2": "",
+      "review3": ""
+    },
+    "contact": {
+      "h2": "Let´s build something cool together!",
+      "text1": "Got a problem to solve?",
+      "text2": "If I catch your attention, don´t hesitate to contact me with this formular. I would be happy to hear from you!"
+    },
+    "formular": {
+      "name": "What´s your name?",
+      "name_placeholder": "Your name goes here.",
+      "email": "What´s your email?",
+      "email_placeholder": "your email@email.com",
+      "message": "How can I help you?",
+      "message_placeholder": "Hello Barbora, I am interested in...",
+      "checkbox_text": "I´ve read the privacy policy and agree to the processing of my data."
     }
+  }
   }
