--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -8,7 +8,7 @@
       "text": "Hello, I´m Barbora Lambeinova. What I love about coding is the creativity of solutions and almost endless possibilities."
     },
     "competencen": {
-      "h2": "Core KCompetencies",
+      "h2": "Core Competencies",
       "text": "I usedd a variety of front-end technologies. You can take a look on the ready projects in the next section."
     },
     "work": {
