responsiveness for data protection and impressum

--- a/public/i18n/de.json
+++ b/public/i18n/de.json
@@ -5,7 +5,7 @@
     },
     "about_me": {
       "h2": "Über mich",
-      "text1": "Hallo, ich bin Barbora Lambeinova. Am Programmieren mag ich am meisten die dabei freigegebene Kreativität.",
+      "text1": "Hallo, ich bin Barbora Lambeinova. Am Programmieren schätze ich besonders, wie es meine Kreativität entfaltet.",
       "text2": "Lass uns verbinden und gemeinsam etwas Erstaunliches erschaffen!"
     },
     "competencen": {
