--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -7,7 +7,13 @@
       "h2": "About me",
       "text1": "I am a motivated Frontend Developer with a creative, interdisciplinary background. After years of working in various fields, I found my calling for IT in 2024. With a foundation in JavaScript, HTML, CSS, and UX/UI design, I strive to create functional and aesthetically pleasing websites that offer an experience for the user.",
       "text2": "What fascinates me most about working as a developer is the creative aspect and the playful element in the code itself.",
-      "text3": "Let's connect and create something amazing together!"
+      "text3": "Let's connect and create something amazing together!",
+      "slide_up_info": [
+          "Teamplayer",
+          "Open to learn new skills",
+          "Based in Wemding",
+          "Open to work remote"
+      ]
     },
     "competencen": {
       "h2": "Core Competencies",
