new text for mobile view in second section, added, styled

--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -5,6 +5,7 @@
     },
     "about_me": {
       "h2": "About me",
+      "mobile_view_text": "Creative Frontend Developer with an interdisciplinary background. Enthusiastic about IT since 2024. Designs user-centered websites with a focus on JavaScript, HTML, CSS, and UX/UI.",
       "text1": "I am a motivated Frontend Developer with a creative, interdisciplinary background. After years of working in various fields, I found my calling for IT in 2024. With a foundation in JavaScript, HTML, CSS, and UX/UI design, I strive to create functional and aesthetically pleasing websites that offer an experience for the user.",
       "text2": "What fascinates me most about working as a developer is the creative aspect and the playful element in the code itself.",
       "text3": "Let's connect and create something amazing together!",
