--- a/public/i18n/de.json
+++ b/public/i18n/de.json
@@ -5,6 +5,7 @@
     },
     "about_me": {
       "h2": "Über mich",
+      "mobile_view_text": "Kreative Frontend-Entwicklerin mit interdisziplinärem Hintergrund. Seit 2024 begeistert in der IT. Gestaltet nutzerzentrierte Websites mit Fokus auf JavaScript, HTML, CSS und UX/UI.",
       "text1": "Ich bin motivierte Frontend Entwicklerin mit kreativem, interdisziplinärem Hintergrund.  Nach Jahren der Arbeit in verschiedenen Bereichen habe ich 2024 meine Berufung in der IT gefunden. Mit einem starken Fundament in den Bereichen JavaScript, HTML, CSS, und UX/UI Design strebe ich danach, funktionale und ästhetisch ansprechende Websites zu gestalten, die den Nutzern ein Erlebnis bieten.",
       "text2": "Was mich an der Arbeit als Entwickler:in besonders fasziniert, ist die kreative Freiheit und das verspielte Element, das in dem Code selbst steckt.",
       "text3": "Lass uns verbinden und gemeinsam etwas Erstaunliches erschaffen!",
