--- a/public/i18n/de.json
+++ b/public/i18n/de.json
@@ -23,7 +23,10 @@
     "work": {
       "h2": "Projekte",
       "text": "Hier präsentiere ich eine Auswahl meiner Arbeiten – interagiere mit den Projekten, um meine Fähigkeiten in Aktion zu erleben.",
-      "description": "Mein Pokedex-Projekt zeigt auf unterhaltsame Art und Weise meine Fähigkeiten in der Integration von REST-APIs. Erkunde alle Pokémon-Details, die ich mithilfe der PokeAPI abrufe und dynamisch darstelle.",
+      "Pokedex": {
+          "description": "Mein Pokedex-Projekt zeigt auf unterhaltsame Art und Weise meine Fähigkeiten in der Integration von REST-APIs. Erkunde alle Pokémon-Details, die ich mithilfe der PokeAPI abrufe und dynamisch darstelle.",
+          "contribution": "Als alleinige Entwicklerin dieses Projekts war ich verantwortlich für die vollständige Umsetzung, einschließlich der Anbindung der PokeAPI und der Gestaltung der interaktiven Elemente."
+      },
       "arrow_left": "Vorheriges Projekt",
       "arrow_right": "Nächstes Projekt"
     },
