--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -23,7 +23,10 @@
     "work": {
       "h2": "My work",
       "text": "Explore a selection of my work below interact with them to see my skills demonstrated.",
-      "description": "Check out my Pokedex project, a fun and functional demonstration of my REST API integration skills. Using the comprehensive PokeAPI, you can browse through Pokémon details and see how I handle data retrieval and dynamic content rendering.",
+      "Pokedex": {
+          "description": "Pokedex project, a fun and functional demonstration of my REST API integration skills. Browse through Pokémon details and see how I handle data retrieval and dynamic content rendering.",
+          "contribution": "Being the sole developer on this project, I handled its entire implementation, from integrating the PokeAPI and creation the interactive elements."
+      },
       "arrow_left": "Previous Project",
       "arrow_right": "Next Project"
     },
