--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -23,10 +23,20 @@
     "work": {
       "h2": "My work",
       "text": "Explore a selection of my work below interact with them to see my skills demonstrated.",
-      "Pokedex": {
+      "projects": [
+        {
           "description": "Pokedex project, a fun and functional demonstration of my REST API integration skills. Browse through Pokémon details and see how I handle data retrieval and dynamic content rendering.",
           "contribution": "Being the sole developer on this project, I handled its entire implementation, from integrating the PokeAPI and creation the interactive elements."
       },
+      {
+        "description": "Join",
+        "contribution": "Join"
+      },
+      {
+      "description": "Pokedex project, a fun and functional demonstration of my REST API integration skills. Browse through Pokémon details and see how I handle data retrieval and dynamic content rendering.",
+      "contribution": "Being the sole developer on this project, I handled its entire implementation, from integrating the PokeAPI and creation the interactive elements."
+      }
+      ],      
       "arrow_left": "Previous Project",
       "arrow_right": "Next Project"
     },
