new text in english and german for my competencies

--- a/public/i18n/de.json
+++ b/public/i18n/de.json
@@ -18,7 +18,7 @@
     },
     "competencen": {
       "h2": "Core Kompetenzen",
-      "text": "Ich habe viele Technologien benutzt, eine Auswahl finden Sie in dem Überblick nebenan."
+      "text": "Meine technologischen Kernkompetenzen umfassen Angular, Firebase (inkl. Authentifizierung), objektorientiertes JavaScript, REST API-Integration sowie die Frontend-Entwicklung mit HTML, CSS und SCSS. Durch meine vielfältigen Projekte habe ich meine Fähigkeit zur erfolgreichen Konzeption und Umsetzung von Webanwendungen in Einzel- und Teamarbeit unter Beweis gestellt."
     },
     "work": {
       "h2": "Projekte",
