--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -18,7 +18,7 @@
     },
     "competencen": {
       "h2": "Core Competencies",
-      "text": "I usedd a variety of front-end technologies. You can take a look on the ready projects in the next section."
+      "text": "My fundamental technological strengths lie in Angular, Firebase (including Authentication), object-oriented JavaScript, REST API integration, and frontend development with HTML, CSS, and SCSS. My diverse portfolio demonstrates my proven ability to successfully conceive and implement web applications in both individual and collaborative environments."
     },
     "work": {
       "h2": "My work",
