--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -43,9 +43,9 @@
     },
     "reviews": {
       "h2": "What my colleagues say about me:",
-      "review1": "",
-      "review2": "",
-      "review3": "",
+      "review1": "Working with Barbora is extremely pleasant. She not only quickly understands her tasks but also executes them with the utmost precision and care. Her work style is consistently structured and efficient, making teamwork with her particularly productive and enjoyable. Barbora brings a positive and motivated attitude to the team, and her reliability plays a key role in the success of our joint projects. It is truly a pleasure working with her!",
+      "review2": "Working with Barbora was a great experience. She was always eager to take on new challenges and tackle bugs. In our Angular project Join, she developed complete features, such as the add-task section. Her determination was impressive, and her openness to both giving and receiving feedback made our collaboration not only productive but also genuinely enjoyable. I’d be happy to work with her again anytime.",
+      "review3": "Barbora is a reliable and professional team player. She dedicated herself extensively to adding and structuring tasks, and also took on design responsibilities. Her sense of design and structured approach brought clear added value to the project, both in terms of content and visually.",
       "link": "To the Linkedin Profile"
     },
     "contact": {
