new structure of contact section

--- a/public/i18n/de.json
+++ b/public/i18n/de.json
@@ -54,8 +54,8 @@
     },
     "contact": {
       "h2_part1": "Lass uns zusammen",
-      "h2_part2": "ein tolles Projekt",
-      "h2_part3": "starten!",
+      "h2_part2": "etwas Cooles",
+      "h2_part3": "entwickeln!",
       "text1": "Haben Sie ein Problem zu lösen?",
       "text2": "Kontaktieren Sie mir gerne mit diesem Kontakt Formular. Ich freue mich auf euere Angebote!"
     },
