--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -18,7 +18,8 @@
     },
     "competencen": {
       "h2": "Core Competencies",
-      "text": "My fundamental technological strengths lie in Angular, Firebase (including Authentication), object-oriented JavaScript, REST API integration, and frontend development with HTML, CSS, and SCSS. My diverse portfolio demonstrates my proven ability to successfully conceive and implement web applications in both individual and collaborative environments.",
+      "text": "My fundamental technological strengths lie in Angular, Firebase (including Authentication), object-oriented JavaScript, REST API integration, and frontend development with HTML, CSS, and SCSS.",
+      "text_vanishable": "My diverse portfolio demonstrates my proven ability to successfully conceive and implement web applications in both individual and collaborative environments.",
       "further_skills": {
         "h5": "Don´t see the skill you are looking for?",
         "p": "Feel free to contact me. I look forward to expanding my previous knowledge. Also I have a special interest in learning: "
