--- a/public/i18n/de.json
+++ b/public/i18n/de.json
@@ -74,5 +74,20 @@
       "checkbox_link": "Datenschutzerklärung",
       "checkbox_text_part2": "gelesen und stimme der Verarbeitung meiner Daten zu.",
       "checkbox_error": "Bitte akzeptiere die Datenschutzbestimmungen."
+    },
+    "imprint": {
+      "title": "Impressum",
+      "law": "Angaben gemäß § 5 TMG (Telemediengesetz):",
+      "adress": "Adresse",
+      "site": "Webseite",
+      "disclaimer": "Haftungsausschluss (Disclaimer)",
+      "content": "Inhalte dieser Webseite: Die Inhalte unserer Webseiten wurden mit größter Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit und Aktualität der Inhalte können wir jedoch keine Gewähr übernehmen. Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen.",
+      "liability": "Haftung für Links: Unser Angebot enthält Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar.",
+      "copyright": "Urheberrecht: Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Beiträge Dritter sind als solche gekennzeichnet. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechts bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers.",
+      "privacy-policy": "Datenschutz: Es gelten die Datenschutzbestimmungen gemäß unserer",
+      "privacy-policy-link": "Datenschutz"
+    },
+    "privacy-policy": {
+      
     }
 }
