imprint and privacy policy translated into english

--- a/public/i18n/de.json
+++ b/public/i18n/de.json
@@ -88,6 +88,43 @@
       "privacy-policy-link": "Datenschutz"
     },
     "privacy-policy": {
-      
-    }
+      "title": "Datenschutzerklärung",
+      "title01": "Einleitung",
+      "text01": "Ich freue mich über Ihr Interesse an meinem Portfolio. Der Schutz Ihrer personenbezogenen Daten ist mir ein wichtiges Anliegen. Im Folgenden informiere ich Sie daher über die Erhebung, Verarbeitung und Nutzung Ihrer personenbezogenen Daten bei der Nutzung des Formulars und der Webseite gemäß den geltenden Datenschutzbestimmungen, insbesondere der Datenschutz-Grundverordnung (DSGVO).",
+      "title02": "Verantwortlicher",
+      "text02": "Verantwortlicher im Sinne der Datenschutz-Grundverordnung (DSGVO) und anderer nationaler Datenschutzgesetze ist:",
+      "title03": "Erhebung und Verarbeitung personenbezogener Daten",
+      "text03": "Die Nutzung des Formulars auf dieser Webseite setzt voraus, dass Sie bestimmte personenbezogene Daten angeben, wie zum Beispiel:",
+      "adress": "E-Mail-Adresse",
+      "message": "Nachricht",
+      "text03b": "Diese Daten werden nur für den Zweck der Bearbeitung Ihrer Anfrage verwendet. Eine darüber hinausgehende Verwendung der Daten erfolgt nicht.",
+      "title04": "Zweck und Rechtsgrundlage der Datenverarbeitung",
+      "text04": "Wir verarbeiten Ihre personenbezogenen Daten nur zu den folgenden Zwecken:",
+      "text04b": "Bearbeitung und Beantwortung Ihrer Anfrage über das Formular.",
+      "text04c": "Zur Erfüllung von vertraglichen Pflichten, wenn Sie eine Anfrage stellen oder mit uns in Kontakt treten.",
+      "text04d": "Die Rechtsgrundlage für die Verarbeitung Ihrer Daten basiert auf:",
+      "text04e": "Art. 6 Abs. 1 lit. b DSGVO – Erforderlich zur Erfüllung eines Vertrages oder zur Durchführung vorvertraglicher Maßnahmen.",
+      "text04f": "Art. 6 Abs. 1 lit. a DSGVO – Ihre Einwilligung (z.B. durch das Abhaken der Zustimmung zur Verarbeitung der Daten).",
+      "title05": "Einwilligung zur Verarbeitung der Daten",
+      "text05": "Mit dem Absenden des Formulars und dem Abhaken der Zustimmung zur Verarbeitung Ihrer Daten bestätigen Sie, dass Sie mit der Speicherung und Verarbeitung Ihrer personenbezogenen Daten zum genannten Zweck einverstanden sind.",
+      "title06": "Speicherung der Daten",
+      "text06": "Ihre personenbezogenen Daten werden nur so lange gespeichert, wie dies zur Bearbeitung Ihrer Anfrage erforderlich ist, und werden anschließend gelöscht, es sei denn, gesetzliche Aufbewahrungspflichten stehen einer Löschung entgegen.",
+      "title07": "Weitergabe von Daten",
+      "text07": "Ihre personenbezogenen Daten werden nicht an Dritte weitergegeben, es sei denn, dies ist zur Erfüllung des Zwecks erforderlich oder es besteht eine gesetzliche Verpflichtung zur Weitergabe.",
+      "title08": "Ihre Rechte",
+      "text08": "Als betroffene Person haben Sie die folgenden Rechte:",
+      "text08a": "Auskunftsrecht: Sie haben das Recht, Auskunft über Ihre von uns gespeicherten personenbezogenen Daten zu erhalten.",
+      "text08b": "Recht auf Berichtigung: Sie können die Berichtigung unrichtiger oder die Vervollständigung unvollständiger personenbezogener Daten verlangen.",
+      "text08c": "Recht auf Löschung: Sie können die Löschung Ihrer personenbezogenen Daten verlangen, sofern keine gesetzlichen Aufbewahrungspflichten entgegenstehen.",
+      "text08d": "Recht auf Einschränkung der Verarbeitung: Sie können die Einschränkung der Verarbeitung Ihrer personenbezogenen Daten verlangen.",
+      "text08e": "Widerspruchsrecht: Sie können der Verarbeitung Ihrer personenbezogenen Daten widersprechen, soweit diese auf einer berechtigten Interessen basiert.",
+      "text08f": "Recht auf Datenübertragbarkeit: Sie können die Übertragung Ihrer personenbezogenen Daten in einem strukturierten, gängigen und maschinenlesbaren Format verlangen.",
+      "text08g": "Um diese Rechte auszuüben, können Sie uns jederzeit unter den angegebenen Kontaktmöglichkeiten erreichen.",
+      "title09": "Sicherheit Ihrer Daten",
+      "text09": "Wir treffen alle erforderlichen technischen und organisatorischen Maßnahmen, um Ihre personenbezogenen Daten vor unbefugtem Zugriff, Verlust oder Zerstörung zu schützen.",
+      "title10": "Änderungen dieser Datenschutzerklärung",
+      "text10": "Wir behalten uns vor, diese Datenschutzerklärung bei Bedarf anzupassen. Eine aktuelle Version wird stets auf dieser Webseite veröffentlicht.",
+      "title11": "Kontakt",
+      "text11": "Falls Sie Fragen zu dieser Datenschutzerklärung oder zur Verarbeitung Ihrer personenbezogenen Daten haben, können Sie mich unter den folgenden Kontaktdaten erreichen:"
+     }
 }
