--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -86,5 +86,45 @@
       "copyright": "Copyright: The content and works created by the site operators on these pages are subject to German copyright law. Contributions from third parties are marked as such. The duplication, processing, distribution and any kind of exploitation outside the limits of copyright require the written consent of the respective author or creator.",
       "privacy-policy": "Privacy policy: The data protection regulations according to our",
       "privacy-policy-link": "Privacy Policy"
-    }
+    },
+    "privacy-policy": {
+    "title": "Privacy Policy",
+    "title01": "Introduction",
+    "text01": "Thank you for your interest in my portfolio. The protection of your personal data is important to me. In the following, I therefore inform you about the collection, processing, and use of your personal data when using the form and the website in accordance with the applicable data protection regulations, in particular the General Data Protection Regulation (GDPR).",
+    "title02": "Controller",
+    "text02": "The controller within the meaning of the General Data Protection Regulation (GDPR) and other national data protection laws is:",
+    "title03": "Collection and Processing of Personal Data",
+    "text03": "The use of the form on this website requires you to provide certain personal data, such as:",
+    "adress": "Email address",
+    "message": "Message",
+    "text03b": "This data will only be used for the purpose of processing your request. Any further use of the data does not occur.",
+    "title04": "Purpose and Legal Basis of Data Processing",
+    "text04": "We process your personal data only for the following purposes:",
+    "text04b": "Processing and responding to your request via the form.",
+    "text04c": "To fulfill contractual obligations if you make an inquiry or contact us.",
+    "text04d": "The legal basis for the processing of your data is based on:",
+    "text04e": "Art. 6 para. 1 lit. b GDPR – Necessary for the performance of a contract or for the implementation of pre-contractual measures.",
+    "text04f": "Art. 6 para. 1 lit. a GDPR – Your consent (e.g., by ticking the consent to the processing of data).",
+    "title05": "Consent to the Processing of Data",
+    "text05": "By submitting the form and ticking the consent to the processing of your data, you confirm that you agree to the storage and processing of your personal data for the stated purpose.",
+    "title06": "Storage of Data",
+    "text06": "Your personal data will only be stored for as long as it is necessary to process your request and will subsequently be deleted, unless statutory retention obligations prevent deletion.",
+    "title07": "Disclosure of Data",
+    "text07": "Your personal data will not be disclosed to third parties unless this is necessary to fulfill the purpose or there is a legal obligation to disclose.",
+    "title08": "Your Rights",
+    "text08": "As a data subject, you have the following rights:",
+    "text08a": "Right of access: You have the right to obtain information about your personal data stored by us.",
+    "text08b": "Right to rectification: You can request the correction of incorrect or the completion of incomplete personal data.",
+    "text08c": "Right to erasure: You can request the deletion of your personal data, provided that there are no legal retention obligations to the contrary.",
+    "text08d": "Right to restriction of processing: You can request the restriction of the processing of your personal data.",
+    "text08e": "Right to object: You can object to the processing of your personal data, insofar as this is based on a legitimate interest.",
+    "text08f": "Right to data portability: You can request the transfer of your personal data in a structured, commonly used, and machine-readable format.",
+    "text08g": "To exercise these rights, you can contact us at any time using the contact details provided.",
+    "title09": "Security of Your Data",
+    "text09": "We take all necessary technical and organizational measures to protect your personal data from unauthorized access, loss, or destruction.",
+    "title10": "Changes to this Privacy Policy",
+    "text10": "We reserve the right to adapt this privacy policy as needed. A current version will always be published on this website.",
+    "title11": "Contact",
+    "text11": "If you have any questions about this privacy policy or the processing of your personal data, you can reach me using the following contact details:"
+  }
 }
