big screens for imprint and privacy policy

--- a/public/i18n/de.json
+++ b/public/i18n/de.json
@@ -75,6 +75,9 @@
       "checkbox_text_part2": "gelesen und stimme der Verarbeitung meiner Daten zu.",
       "checkbox_error": "Bitte akzeptiere die Datenschutzbestimmungen."
     },
+    "footer": {
+      "imprint": "Impressum"
+    },
     "imprint": {
       "title": "Impressum",
       "law": "Angaben gemäß § 5 TMG (Telemediengesetz):",
