--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -75,6 +75,9 @@
       "checkbox_text_part2": "and agree to the processing of my data.",
       "checkbox_error": "Please accept the privacy policy."
     },
+    "footer": {
+      "imprint": "Imprint"
+    },
     "imprint": {
       "title": "Imprint",
       "law": "Information according to § 5 TMG (Telemedia Act):",
